Added pd to 1_volatility

--- a/1_volatility_wealth_drawdown_distribution.ipynb
+++ b/1_volatility_wealth_drawdown_distribution.ipynb
@@ -19,7 +19,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from finanalysis import ReturnsAnalyzer"
+    "from finanalysis import ReturnsAnalyzer"\n",
+    "import pandas as pd"
    ]
   },
   {
